<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mickmmars</groupId>
    <artifactId>PixliesBase</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>PixliesBase</name>

    <description>PixliesEarth core</description>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>PixliesEarthCore</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                            <relocations>
                                <relocation>
                                    <pattern>com.github.stefvanschie.inventoryframework</pattern>
                                    <shadedPattern>eu.pixliesearth.core.lib.inventoryframework</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
         <id>BB1NBT</id>
         <url>https://github.com/BradBot1/NBTManager</url>
        </repository>
        <repository>
         <id>BB1PMD</id>
         <url>https://github.com/BradBot1/BukkitPersistentMetaData</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>minecraft-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>dynmap</id>
            <url>http://repo.mikeprimm.com/</url>
        </repository>
        <repository>
            <id>codemc</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>citizens</id>
            <url>http://repo.citizensnpcs.co/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>purpur</id>
            <url>https://repo.pl3x.net/</url>
        </repository>
    </repositories>

    <dependencies>
<!--        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper</artifactId>
            <version>1.16.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>-->
        <dependency>
            <groupId>net.pl3x.purpur</groupId>
            <artifactId>purpur</artifactId>
            <version>1.16.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.12</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.stefvanschie.inventoryframework</groupId>
            <artifactId>IF</artifactId>
            <version>0.5.19</version>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.3</version>
        </dependency>
        <dependency>
            <groupId>org.javacord</groupId>
            <artifactId>javacord</artifactId>
            <version>3.1.1</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.9-RC1</version>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.kevinsawicki</groupId>
            <artifactId>http-request</artifactId>
            <version>6.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.5.12</version>
        </dependency>
        <dependency>
            <groupId>org.dynmap</groupId>
            <artifactId>dynmap</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>bukkit</artifactId>
                    <groupId>org.bukkit</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>Permissions</artifactId>
                    <groupId>com.nijikokun.bukkit</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>bPermissions</artifactId>
                    <groupId>de.bananaco</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>EssentialsGroupManager</artifactId>
                    <groupId>org.anjocaido</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spoutpluginapi</artifactId>
                    <groupId>org.getspout</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>PermissionsBukkit</artifactId>
                    <groupId>com.platymuus.bukkit.permissions</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>PermissionsEx</artifactId>
                    <groupId>ru.tehkode</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
            <artifactId>holographicdisplays-api</artifactId>
            <version>2.4.3</version>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
<!--        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.18-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>-->
        <dependency>
            <groupId>com.github.yannicklamprecht.WorldBorderAPI</groupId>
            <artifactId>API</artifactId>
            <version>1.163.1</version>
        </dependency>
        <dependency>
            <groupId>com.gitlab.ruany</groupId>
            <artifactId>LiteBansAPI</artifactId>
            <version>0.3.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.flowpowered</groupId>
            <artifactId>flow-nbt</artifactId>
            <version>1.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.BradBot1</groupId>
            <artifactId>NBTManager</artifactId>
            <version>e8e8436245</version>
        </dependency>
        <dependency>
            <groupId>com.github.BradBot1</groupId>
            <artifactId>BukkitPersistentMetaData</artifactId>
            <version>-1845985d4a-1</version>
        </dependency>
    </dependencies>
</project>
